# libffi-clib

./: .gitignore  CHANGELOG.md  aclocal.m4  configure.ac  configure.host  fficonfig.h.in  libffi-clib.buildinfo.in  libffi-clib.cabal  update_ffi.sh
.github/workflows/: ci.yml
m4/: lt_undescore.m4
patches/: 0001-Cabal-patch.patch
