cabal-version:      3.12
name:               libffi-clib
version:            3.5.2
license:            MIT
author:             Julian Ospald
maintainer:         hasufell@posteo.de
build-type:         Configure
extra-doc-files:    CHANGELOG.md

extra-source-files:
    aclocal.m4
    compile
    config.guess
    config.sub
    configure
    configure.ac
    configure.host
    fficonfig.h.in
    include/ffi.h.in
    include/*.h
    install-sh
    libffi.buildinfo.in
    ltmain.sh
    m4/*.m4
    src/**/*.S
    src/**/*.c
    src/**/*.h

library
  if arch(javascript)
    buildable: False

  default-language: Haskell2010
  c-sources:
    src/prep_cif.c
    src/types.c
    src/raw_api.c
    src/java_raw_api.c
    src/closures.c
    src/tramp.c

  include-dirs: include
  autogen-includes:
    ffi.h
  install-includes:
    ffi.h
