cabal-version:      3.12
name:               libffi-clib
version:            3.5.2
synopsis:           libffi clibs
description:        C source code for the libffi package
license:            MIT
author:             Julian Ospald
maintainer:         hasufell@posteo.de
build-type:         Configure
extra-doc-files:    CHANGELOG.md

extra-source-files:
    aclocal.m4
    compile
    config.guess
    config.sub
    configure
    configure.ac
    configure.host
    fficonfig.h.in
    include/ffi.h.in
    include/*.h
    install-sh
    libffi-clib.buildinfo.in
    ltmain.sh
    m4/*.m4
    src/**/*.S
    src/**/*.c
    src/**/*.h

flag profiling
  default: False
  manual: True
flag debug
  default: False
  manual: True
flag dynamic
  default: False
  manual: True
flag threaded
  default: False
  manual: True

library
  if arch(javascript)
    buildable: False

  default-language: Haskell2010
  c-sources:
    src/prep_cif.c
    src/types.c
    src/raw_api.c
    src/java_raw_api.c
    src/closures.c
    src/tramp.c

  include-dirs: include
  autogen-includes:
    ffi.h
  install-includes:
    ffi.h

  if flag(threaded)
    extra-library-flavours: _thr
    if flag(dynamic)
      extra-dynamic-library-flavours: _thr

  if flag(profiling)
    extra-library-flavours: _p
    if flag(threaded)
      extra-library-flavours: _thr_p
    if flag(debug)
      extra-library-flavours: _debug_p
      if flag(threaded)
        extra-library-flavours: _thr_debug_p
    if flag(dynamic)
      extra-dynamic-library-flavours: _p
      if flag(threaded)
        extra-dynamic-library-flavours: _thr_p
      if flag(debug)
        extra-dynamic-library-flavours: _debug_p
        if flag(threaded)
          extra-dynamic-library-flavours: _thr_debug_p

  if flag(debug)
    extra-library-flavours: _debug
    if flag(dynamic)
      extra-dynamic-library-flavours: _debug
    if flag(threaded)
      extra-library-flavours: _thr_debug
      if flag(dynamic)
        extra-dynamic-library-flavours: _thr_debug
